<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLschema"?>
<package format="3">
  <name>audio_stream</name>
  <version>0.1.0</version>
  <description>The audio_stream package</description>

  <author email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</author>
  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>audio_stream_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pyaudio</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pyaudio</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
